# cabal-plan-nix

./: .gitignore  README.org  flake-module.nix  flake.nix
.github/workflows/: nix.yml
example/: cabal.project.freeze  example.cabal  plan.nix
example/.github/workflows/: nix.yml
example/app/: Main.hs
