cabal-version:      3.0
name:               example
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             t4ccer
maintainer:         t4ccer@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      , base ^>=4.16.4.0
      , mtl ^>=2.3.1
      , lens ^>=5.2
    hs-source-dirs:   app
    default-language: GHC2021
